Fix code view color / wrapping.

--- a/static/index.css
+++ b/static/index.css
@@ -28,6 +28,8 @@
 
 #source-view {
     color: #333;
+    background-color: transparent;
+    word-wrap: break-word;
 }
 
 #spinner {
